syntax = "proto3";
option go_package = "github.com/databeast/goatherd/packets";
// Distributed Collector Aggregation Service

service PacketCollection {
  // packetsummary ingest stream
  rpc Ingest (stream PacketSummaryMessage) returns (RegisterResponse) {}

  // Register a CapturePoint
  rpc CapturePoint (RegisterCapturePoint) returns (RegisterResponse) {}
}

// Main PacketSummary protobuf
message PacketSummaryMessage {
  uint32  CapID = 1   ;  // registered CapturePoint ID this packetsummary originates from
  uint32  SrcIP = 2     ;
  uint32  SrcMac = 3   ;
  uint32  DstIP = 4     ;
  uint32  DstMac = 5    ;
  uint32  TTL = 6   ;
}

// Request to Register a New Capturepoint
message RegisterCapturePoint {
  string CollectorID = 1;  // Unique Identifier for Source Collector
  uint32 Netaddr = 2; // Network Address of the local subnet for this capturepoint
  uint32 Netmask = 3; // Netmask Mask of the local subnet for this capturepoint
  string NicName = 4; // system name for NIC of capturepoint - used for reporting
  uint32 DefaultGateway = 5 ; // MAC address of the default upstream gateway for this subnet
}

message RegisterResponse {
  uint32 CaptureID = 1;
}
